--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   test:
     strategy:
-      matrix: go-version: [ 1.16.x, 1.17.x, 1.18.x ]
+      matrix:
+        go-version: [ 1.16.x, 1.17.x, 1.18.x ]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
